--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
         <!-- Callout -->
         <section class="callout">
             <h1>The finest whiskeys delivered to your doorstep.</h1>
-            <p>Sign up today to start receiving the world's best whiskeys every month. First one is free!</p>
+            <p class="lead">Sign up today to start receiving the world's best whiskeys every month. <s>£19.99</s> <strong><mark>First one is free!</mark></strong></p>
+            <button type="button" class="btn btn-success btn-lg">Sign Up!</button>
+            <p class="text-muted"><small>You must be over 18 to sign up to our service.  Please drink responsibly.</small></p>
         </section>
         <!-- /.callout -->
         <hr>
@@ -20,35 +22,79 @@
         <!-- Quotes -->
         <section class="quotes">
             <h2 class="text-uppercase">Quotes:</h2>
-            <div class="quote">
+            <blockquote class="blockquote">
                 <p>I've been introduced to more than 10 great international whiskeys I never knew about.</p>
                 <p>- Jane Doe</p>
-            </div>
-            <div class="quote">
+            </blockquote>
+            <blockquote class="blockquote">
                 <p>I haven't been sober for months!</p>
                 <p>- Jane Doe</p>
-            </div>
+            </blockquote>
         </section>
         <!-- /.quotes -->
         <hr>
 
         <!-- Features -->
         <section class="features">
-            <h2>Features:</h2>
+            <h2 class="text-uppercase">Features:</h2>
             <div class="feature">
                 <h3>Feature 1</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
             </div>
             <div class="feature">
                 <h3>Feature 2</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
             </div>
             <div class="feature">
                 <h3>Feature 3</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
             </div>
         </section>
         <!-- /.features -->
+        <hr>
+
+        <!-- Monthly Favourites -->
+        <section class="favourites">
+            <h2 class="text-uppercase">Monthly Favourites:</h2>
+            <table class="table">
+                <thead>
+                  <tr>
+                    <th scope="col">name</th>
+                    <th scope="col">origin</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>Busmills</td>
+                    <td>Ireland</td>
+                  </tr>
+                  <tr>
+                    <td>Balvenie</td>
+                    <td>Scotland</td>
+                  </tr>
+                  <tr>
+                    <td>Johnnie Walker</td>
+                    <td>Ireland</td>
+                  </tr>
+                  <tr>
+                    <td>Nikka</td>
+                    <td>Japan</td>
+                  </tr>
+                  <tr>
+                    <td>Glenlivet</td>
+                    <td>Scotland</td>
+                  </tr>
+
+
+                </tbody>
+              </table>
+
+
+        </section>
+        <!-- /.favourites -->
     </article>
 </body>
 
