--- a/index.html
+++ b/index.html
@@ -5,16 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Whiskey Drop | Taste a new whiskey every month</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/82f70701b4.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <article class="container">
+  <!-- Navbar -->
+  <nav class="navbar navbar-light navbar-expand-sm bg-light">
+    <a href="/" class="navbar-brand">Whiskey Drop</a>
+    <ul class="navbar-nav mr-auto">
+      <li class="active nav-item mr-2"><a href="/" class="nav-link">Home</a></li>
+      <li class="nav-item mr-2"><a href="/about" class="nav-link">About</a></li>
+      <li class="nav-item mr-2 d-block d-sm-none"><a class="nav-link" href="">Sign In / Sign Up</a></li>
+    </ul>
+
+    <div class="d-none d-md-block">
+      <p class="navbar-text my-auto mr-2"><i>Great whiskey delivered to your door!</i></p>
+      <a href="/login">Sign In / Sign-Up</a>
+    </div>
+  </nav>
+  <!-- /.navbar -->
+
+    <article class="container mt-3">
         <!-- Callout -->
         <div class="row">
             <div class="col-12">
-                <section class="callout">
+                <section class="callout jumbotron text-center">
                     <h1>The finest whiskeys delivered to your doorstep.</h1>
-                    <p class="lead">Sign up today to start receiving the world's best whiskeys every month. <s>£19.99</s> <strong><mark>First one is free!</mark></strong>
+                    <p class="lead">Sign up today to start receiving the world's best whiskeys every month. 
+                        <s class="d-none d-sm-inline">€19.99</s>
+                        <span class="d-inline d-sm-none"><br></span>
+                        <strong><mark>First one is free!</mark></strong></p>
                     </p><button type="button" class="btn btn-success btn-lg">Sign Up!</button>
                     <p class="text-muted"><small>You must be over 18 to sign up to our service.  Please drink responsibly.</small></p>
                 </section>
@@ -27,23 +47,37 @@
         
         <section class="quotes">
             <div class="row">
-                <div class="col-12">
+                <div class="col-12 my-5">
                     <h2 class="text-uppercase">Quotes:</h2>
                 </div>
             </div>
             <div class="row">
               <div class="col-12 col-md-6">
-                <blockquote class="blockquote">
-                  <p>I've been introduced to more than 10 great international whiskeys I never knew about.</p>
-                  <p>- Jane Doe</p>
-                </blockquote>
+                <div class="media">
+                  <div class="d-none d-sm-block">
+                    <img src="images/girl-image.png" alt="Girl Image" class="rounded-circle mr-3" height=100px width=100px>
+                  </div>
+                  <div class="media-body">
+                    <blockquote class="blockquote">
+                      <p>I've been introduced to more than 10 great international whiskeys I never knew about.</p>
+                      <p>- Jane Doe</p>
+                    </blockquote>
+                  </div>
+                </div>
               </div>
             
-              <div class="col-12 col-md-6">>
-                <blockquote class="blockquote">
-                  <p>I haven't been sober for months!</p>
-                  <p>- Jane Doe</p>
-                </blockquote>
+              <div class="col-12 col-md-6">
+                <div class="media">
+                  <div class="d-none d-sm-block">
+                    <img src="images/guy-image.png" alt="Girl Image" class="rounded-circle mr-3" height=100px width=100px>
+                  </div>
+                  <div class="media-body">
+                    <blockquote class="blockquote">
+                      <p>I haven't been sober for months!</p>
+                      <p>- John Doe</p>
+                    </blockquote>
+                  </div>
+                </div>
               </div>
             </div>
         </section>
@@ -54,28 +88,28 @@
         <!-- Features -->
         <section class="features">
           <div class="row">
-              <div class="col-12">
+              <div class="col-12 my-5">
                   <h2 class="text-uppercase">Features:</h2>
               </div>
           </div>
           <div class="row">
               <div class="col-12 col-md-6 col-lg-4">
                   <div class="feature">
-                      <h3>Feature 1</h3>
+                      <h3><i class="fa-solid fa-gift"></i> Feature 1</h3>
                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                       <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
                   </div>
               </div>
               <div class="col-12 col-md-6 col-lg-4">
                   <div class="feature">
-                      <h3>Feature 2</h3>
+                      <h3><i class="fa-regular fa-credit-card"></i> Feature 2</h3>
                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                       <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
                   </div>
               </div>
               <div class="col-12 d-md-none d-lg-block col-lg-4">
                   <div class="feature">
-                      <h3>Feature 3</h3>
+                      <h3><i class="fa-solid fa-circle-xmark"></i> Feature 3</h3>
                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                       <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
                   </div>
@@ -125,6 +159,9 @@
         </section>
         <!-- /.favourites -->
     </article>
+
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
 </body>
 
 </html>
