--- a/index.html
+++ b/index.html
@@ -12,11 +12,29 @@
   <!-- Navbar -->
   <nav class="navbar navbar-light navbar-expand-sm bg-light">
     <a href="/" class="navbar-brand">Whiskey Drop</a>
-    <ul class="navbar-nav mr-auto">
-      <li class="active nav-item mr-2"><a href="/" class="nav-link">Home</a></li>
-      <li class="nav-item mr-2"><a href="/about" class="nav-link">About</a></li>
-      <li class="nav-item mr-2 d-block d-sm-none"><a class="nav-link" href="">Sign In / Sign Up</a></li>
-    </ul>
+
+    <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span></button>
+
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul class="navbar-nav mr-auto">
+        <li class="active nav-item mr-2"><a href="/" class="nav-link">Home</a></li>
+        <li class="nav-item mr-2"><a href="/about" class="nav-link">About</a></li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+Whiskeys
+</a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <a class="dropdown-item" href="#">Irish</a>
+              <a class="dropdown-item" href="#">Scotch</a>
+              <a class="dropdown-item" href="#">Japanese</a>
+              <a class="dropdown-item" href="#">American</a>
+          </div>
+      </li>
+
+        <li class="nav-item mr-2 d-block d-sm-none"><a class="nav-link" href="">Sign In / Sign Up</a></li>
+      </ul>
+    </div>
 
     <div class="d-none d-md-block">
       <p class="navbar-text my-auto mr-2"><i>Great whiskey delivered to your door!</i></p>
@@ -26,7 +44,7 @@
   <!-- /.navbar -->
 
     <article class="container mt-3">
-      <div class="row">
+      <div class="row d-none d-sm-block">
         <div class="col-12">
           <div class="alert alert-warning">
             <strong>Sale Now On!</strong> We've got a sale on.  Get a 12-month subscription for the price of 6! <a href="">See here for details!</a>
@@ -42,7 +60,7 @@
                         <s class="d-none d-sm-inline">€19.99</s>
                         <span class="d-inline d-sm-none"><br></span>
                         <strong><mark>First one is free!</mark></strong></p>
-                    </p><button type="button" class="btn btn-success btn-lg">Sign Up!</button>
+                    </p><button type="button" class="btn btn-success btn-lg" data-toggle="modal" data-target="#signUpModal">Sign Up!</button>
                     <p class="text-muted"><small>You must be over 18 to sign up to our service.  Please drink responsibly.</small></p>
                 </section>
             </div>
@@ -167,8 +185,39 @@
         <!-- /.favourites -->
     </article>
 
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
+    <div class="modal" tabindex="-1" role="dialog" id="signUpModal">
+      <div class="modal-dialog" role="document">
+          <div class="modal-content">
+              <div class="modal-header">
+                  <h5 class="modal-title">Sign Up To Whiskey Drop!</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+              </div>
+              <div class="modal-body">
+                  <form>
+                      <div class="form-group">
+                          <label for="exampleInputEmail1">Email address</label>
+                          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                          <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                      </div>
+                      <div class="form-group">
+                          <label for="password">Password</label>
+                          <input type="password" class="form-control" id="password" placeholder="Password">
+                      </div>
+                      <div class="form-group">
+                          <label for="repeatPassword">Repeat Password</label>
+                          <input type="password" class="form-control" id="repeatPassword" placeholder="Repeat Password">
+                      </div>
+                      <button type="submit" class="btn btn-success">Submit</button>
+                  </form>
+              </div>
+          </div>
+      </div>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
 </body>
 
 </html>
